--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "bootstrap-icons": "^1.4.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
